# web_turtle

./: Cargo.toml  LICENSE  readme.md  startup.lua
backend/: .gitignore  Cargo.toml
backend/migrations/2023-04-26-125153_create_database/: down.sql  up.sql
backend/src/: database.rs  main.rs  schema.rs  turtle.rs  world.rs
bevy_frontend/: Cargo.toml  Makefile  Trunk.toml  \  build.rs  index.html  main.css
bevy_frontend/assets/: turtle.glb  turtle_model.glb
bevy_frontend/assets/shaders/: terrain_pipeline.wgsl  terrain_pipeline_frag.wgsl  terrain_uniforms.wgsl
bevy_frontend/src/: block_destroy_plugin.rs  chunk_material.rs  egui_ui_plugin.rs  html_ui_plugin.rs  inventory_plugin.rs  lib.rs  main.rs  move_plugin.rs  resize_plugin.rs  resize_system.rs  ui_plugin.rs  world_plugin.rs
frontend/: .env  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.svelte  Renderer.svelte  TailwindCSS.svelte  TurtleElement.svelte  TurtleList.svelte  main.ts
frontend/src/lib/: env.d.ts  result.ts  turtle.ts
shared/: Cargo.toml
shared/src/: lib.rs  static_vec.rs  world_structure.rs
