[package]
name = "backend"
edition = "2021"
version = "0.1.0"

[dependencies]
bytes = "1"
bytestring = "1"
once_cell = "1.18.0"
seahash = "4.1.0"
serde_json = "1.0"
tempfile = "3"
thiserror = "1"
tracing = "0.1"

[dependencies.axum]
version = "0.6"
features = ["ws"]
optional = false

[dependencies.futures]
version = "0.3"
features = ["executor", "std"]
optional = false
default-features = false

[dependencies.serde]
version = "1"
features = ["derive"]
optional = false

[dependencies.shared]
path = "../shared/"
features = []
optional = false

[dependencies.tokio]
version = "1.0"
features = ["full"]
optional = false

[dependencies.tower]
version = "0.4"
features = ["util"]
optional = false

[dependencies.tower-http]
version = "0.4.0"
features = ["trace", "cors"]
optional = false

[dependencies.tracing-subscriber]
version = "0.3"
features = ["regex", "tracing-log", "smallvec", "ansi", "fmt", "thread_local", "tracing", "std", "env-filter", "once_cell"]
optional = false
default-features = false

[dependencies.uuid]
version = "1"
features = ["v4"]
optional = false
