[package]
name = "bevy_frontend"
edition = "2021"
version = "0.1.0"

[dependencies]
bevy_egui = "0.20.3"
bevy_mod_raycast = "0.8.0"
bevy_panorbit_camera = "0.4.1"
block-mesh = "0.2.0"
console_error_panic_hook = "0.1"
console_log = "1.0.0"
log = "0.4"
serde-wasm-bindgen = "0.4"
wasm-bindgen-futures = "0.4"
uuid = { version = "1", features = ["v4"] }
egui_extras = { version = "0.21", features = ["svg"] }
seahash = "4.1.0"
bytes = "1"

[dependencies.bevy]
version = "0.10.1"
default-features = false
features = ["animation", "bevy_core_pipeline", "bevy_scene", "bevy_render", "bevy_winit", "bevy_pbr", "bevy_gltf", "bevy_asset"]

[dependencies.futures]
version = "0.3"
default-features = false
features = ["std"]

[dependencies.gloo-net]
version = "0.2.6"
default-features = false
features = ["http", "json"]

[dependencies.serde]
version = "1"
default-features = false
features = ["derive"]

[dependencies.shared]
path = "../shared/"
features = []

[dependencies.wasm-bindgen]
version = "0.2"
features = ["serde_json", "std", "serde", "spans"]
default-features = false

[dependencies.web-sys]
version = "0.3.6"
features = ["Document", "Element", "HtmlElement", "Node", "Window", "Request", "RequestInit", "RequestMode", "Response", "UiEvent", "PointerEvent"]
default-features = false

[lib]
crate-type = ["cdylib"]
